[Megan] Adds detail to -- description

--- a/unix/--.md
+++ b/unix/--.md
@@ -2,6 +2,9 @@
 
 When you use `--` as a command line argument, it specifies that all the following arguments should get passed to whatever's running.
 
+In other words, when the shell sees `--`, it knows that everything that comes after should be treated as an argument for the command, not an option.
+
+This is notable because, usually, anything in the command that starts with a `-` gets treated as an option. But if you use `--`, you can pass in arguments even if they start with `-`.
 ## Example
 I have my Node project set up to run my linter when I use the command:
 
